--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,22 @@ jobs:
                 name: install pygments
                 command: pip install pygments
             - run:
+                name: theme install
+                command: |
+                    git submodule sync
+                    git submodule update --init --recursive
+            - run:
                 name: build hugo
-                command: hugo
+                command: hugo -t hyde
             - run:
                 name: set git config
                 command: |
                     git config --global user.email "circleci@example.com"
                     git config --global user.name "Circle CI"
             - run:
+                command: git status
+            - run:
                 command: |
                     git add -A
                     git commit -m "deploy from ci [ci skip]"
-                    git push git@github.com:deprode/esa-blog.git master
+                    git push git@github.com:deprode/esa-blog.git master:gh-pages
