--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
             - run:
                 name: theme install
                 command: |
+                    git submodule add  https://github.com/spf13/hyde.git themes/hyde
                     git submodule sync
                     git submodule update --init --recursive
             - run:
@@ -25,9 +26,9 @@ jobs:
                     git config --global user.email "circleci@example.com"
                     git config --global user.name "Circle CI"
             - run:
-                command: git status
+                command: git remote -v
             - run:
                 command: |
                     git add -A
                     git commit -m "deploy from ci [ci skip]"
-                    git push git@github.com:deprode/esa-blog.git master:gh-pages
+                    git push origin master
