--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
                     git submodule update --init --recursive
             - run:
                 name: build hugo
-                command: hugo -t hyde
+                command: hugo -t zlog
             - run:
                 name: set git config
                 command: |
